[gd_scene format=3 uid="uid://cm3fpkxlfx3d7"]

[ext_resource type="Script" uid="uid://br2qh3mfr2qol" path="res://src/main.gd" id="1_5q4o7"]
[ext_resource type="PackedScene" uid="uid://dn4rspvnxavxf" path="res://src/gui/fps_counter.tscn" id="1_eewff"]
[ext_resource type="PackedScene" uid="uid://datw6v11sif3q" path="res://src/gui/main_menu/main_menu.tscn" id="3_fyndt"]
[ext_resource type="PackedScene" uid="uid://13yxv773160s" path="res://src/world/world.tscn" id="4_fyndt"]
[ext_resource type="AudioStream" uid="uid://tn03pn20sgi8" path="res://assets/Conflict1.ogg" id="5_fyndt"]

[node name="Main" type="Node" unique_id=1940223439]
script = ExtResource("1_5q4o7")

[node name="GUI" type="Control" parent="." unique_id=1228005794]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="PlayerName" type="Label" parent="GUI" unique_id=677588385]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 42.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 30

[node name="MainMenu" parent="GUI" unique_id=1411443913 instance=ExtResource("3_fyndt")]
unique_name_in_owner = true
layout_mode = 1

[node name="FPSCounter" parent="GUI" unique_id=1921442735 instance=ExtResource("1_eewff")]
layout_mode = 0
theme_override_font_sizes/font_size = 30

[node name="World" parent="." unique_id=744991072 instance=ExtResource("4_fyndt")]
unique_name_in_owner = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="." unique_id=1294372059]
stream = ExtResource("5_fyndt")
autoplay = true

[connection signal="game_selected" from="GUI/MainMenu" to="." method="_on_main_menu_game_selected"]
